19 Di Container (7) : Implement Field Injection.