@@ -1,32 +1,23 @@
 import jakarta.inject.Inject;
 
 import java.lang.reflect.Constructor;
+import java.lang.reflect.Field;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Parameter;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import static java.util.Arrays.stream;
 
 class ConstructorInjectionProvider<T> implements ContextConfig.ComponentProvider<T> {
     private final Constructor<T> injectConstructor;
+    private List<Field> injectFields;
 
     public ConstructorInjectionProvider(Class<T> component) {
         this.injectConstructor = getInjectConstructor(component);
-    }
-
-    private static <Type> Constructor<Type> getInjectConstructor(Class<Type> implementation) {
-        List<Constructor<?>> injectConstructors = stream(implementation.getConstructors())
-                .filter(c -> c.isAnnotationPresent(Inject.class)).collect(Collectors.toList());
-        if (injectConstructors.size() > 1) throw new IllegalComponentException();
-        return (Constructor<Type>) injectConstructors.stream().findFirst().orElseGet(() -> {
-            try {
-                return implementation.getConstructor();
-            } catch (NoSuchMethodException e) {
-                e.printStackTrace();
-                throw new IllegalComponentException();
-            }
-        });
+        this.injectFields = getInjectFields(component);
     }
 
     @Override
@@ -35,7 +26,11 @@ class ConstructorInjectionProvider<T> implements ContextConfig.ComponentProvider
             Object[] dependencies = stream(injectConstructor.getParameters())
                     .map(p -> context.get(p.getType()).get())
                     .toArray(Object[]::new);
-            return injectConstructor.newInstance(dependencies);
+            T instance = injectConstructor.newInstance(dependencies);
+            for (Field field : injectFields) {
+                field.set(instance, context.get(field.getType()).get());
+            }
+            return instance;
         } catch (InvocationTargetException | InstantiationException | IllegalAccessException e) {
             throw new RuntimeException(e);
         }
@@ -43,7 +38,31 @@ class ConstructorInjectionProvider<T> implements ContextConfig.ComponentProvider
 
     @Override
     public List<Class<?>> getDependencies() {
-        return stream(injectConstructor.getParameters()).map(Parameter::getType).collect(Collectors.toList());
+        return Stream.concat(stream(injectConstructor.getParameters()).map(Parameter::getType),
+                injectFields.stream().map(Field::getType)).toList();
     }
 
+    private static <T> List<Field> getInjectFields(Class<T> component) {
+        List<Field> injectFields = new ArrayList<>();
+        Class<?> current = component;
+        while (current != Object.class) {
+            injectFields.addAll(stream(current.getDeclaredFields()).filter(p -> p.isAnnotationPresent(Inject.class)).toList());
+            current = current.getSuperclass();
+        }
+        return injectFields;
+    }
+
+    private static <Type> Constructor<Type> getInjectConstructor(Class<Type> implementation) {
+        List<Constructor<?>> injectConstructors = stream(implementation.getConstructors())
+                .filter(c -> c.isAnnotationPresent(Inject.class)).collect(Collectors.toList());
+        if (injectConstructors.size() > 1) throw new IllegalComponentException();
+        return (Constructor<Type>) injectConstructors.stream().findFirst().orElseGet(() -> {
+            try {
+                return implementation.getDeclaredConstructor();
+            } catch (NoSuchMethodException e) {
+                e.printStackTrace();
+                throw new IllegalComponentException();
+            }
+        });
+    }
 }
